[package]
name = "blas-src"
version = "0.9.0"
license = "Apache-2.0/MIT"
authors = [
    "Balasubramanian Narasimhan <b.naras@gmail.com>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Jed Brown <jed@jedbrown.org>",
    "Stefan Kroboth <stefan.kroboth@gmail.com>",
    "Toshiki Teramura <toshiki.teramura@gmail.com>",
    "bluss",
]
description = "The package provides a BLAS source of choice."
documentation = "https://docs.rs/blas-src"
homepage = "https://github.com/blas-lapack-rs/blas-src"
repository = "https://github.com/blas-lapack-rs/blas-src"
readme = "README.md"
categories = ["science"]
keywords = ["linear-algebra"]

[features]
accelerate = ["accelerate-src"]
blis = ["blis-src"]
intel-mkl = ["intel-mkl-src"]
netlib = ["netlib-src"]
openblas = ["openblas-src"]
r = ["r-src"]

[dependencies.accelerate-src]
version = "0.3"
optional = true

[dependencies.blis-src]
version = "0.2"
optional = true

[dependencies.intel-mkl-src]
version = "0.8"
optional = true

[dependencies.netlib-src]
version = "0.8"
optional = true

[dependencies.openblas-src]
version = "0.10"
optional = true

[dependencies.r-src]
version = "0.1"
optional = true
